[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/keyboard_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/Outro.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeIn/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeIn/Label:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Intro" type="MarginContainer"]
margin_right = 1020.0
margin_bottom = 579.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slide1" type="VBoxContainer" parent="."]
margin_right = 1020.0
margin_bottom = 579.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="AnimationPlayer" parent="Slide1"]
anims/FadeIn = SubResource( 1 )

[node name="Label" type="Label" parent="Slide1/FadeIn"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "The fresh air graces your face as you reach the ground floor..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" type="AnimationPlayer" parent="Slide1"]
anims/FadeOut = SubResource( 2 )

[node name="Slide2" type="VBoxContainer" parent="."]
margin_right = 1020.0
margin_bottom = 579.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="AnimationPlayer" parent="Slide2"]
anims/FadeIn = SubResource( 3 )

[node name="Label" type="Label" parent="Slide2/FadeIn"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "...a huge stone arc invites you out, to your freedom..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" type="AnimationPlayer" parent="Slide2"]
anims/FadeOut = SubResource( 4 )

[node name="Slide3" type="VBoxContainer" parent="."]
margin_right = 1020.0
margin_bottom = 579.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="AnimationPlayer" parent="Slide3"]
anims/FadeIn = SubResource( 5 )

[node name="Label" type="Label" parent="Slide3/FadeIn"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "...you know this isn't over, a curse must be broken but..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" type="AnimationPlayer" parent="Slide3"]
anims/FadeOut = SubResource( 6 )

[node name="Slide4" type="VBoxContainer" parent="."]
margin_right = 1020.0
margin_bottom = 579.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="AnimationPlayer" parent="Slide4"]
anims/FadeIn = SubResource( 7 )

[node name="Label" type="Label" parent="Slide4/FadeIn"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "...at least there should be plenty of wax out there!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" type="AnimationPlayer" parent="Slide4"]
anims/FadeOut = SubResource( 8 )

[node name="Slide5" type="VBoxContainer" parent="."]
margin_right = 1020.0
margin_bottom = 579.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="AnimationPlayer" parent="Slide5"]
anims/FadeIn = SubResource( 9 )

[node name="Label" type="Label" parent="Slide5/FadeIn"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "TO BE CONTINUED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" type="AnimationPlayer" parent="Slide5"]
anims/FadeOut = SubResource( 10 )

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
